// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Endpoint > .getSchema() > should return the negative response schema 1`] = `
{
  "_cached": null,
  "_def": {
    "catchall": {
      "_def": {
        "typeName": "ZodNever",
      },
    },
    "expressZodApiMeta": {
      "examples": [
        {
          "error": {
            "message": "Sample error message",
          },
          "status": "error",
        },
      ],
    },
    "typeName": "ZodObject",
    "unknownKeys": "strip",
  },
}
`;

exports[`Endpoint > .getSchema() > should return the positive response schema 1`] = `
{
  "_cached": null,
  "_def": {
    "catchall": {
      "_def": {
        "typeName": "ZodNever",
      },
    },
    "expressZodApiMeta": {
      "examples": [],
    },
    "typeName": "ZodObject",
    "unknownKeys": "strip",
  },
}
`;
